--- a/repfit_main/pubspec.yaml
+++ b/repfit_main/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
   english_words: ^4.0.0
+  syncfusion_flutter_charts: ^20.4.50
+  video_player: ^2.5.1
 
 dev_dependencies:
   flutter_test:
