--- a/repfit_main/pubspec.yaml
+++ b/repfit_main/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   video_player: ^2.5.1
   sqflite:
   path:
+  youtube_player_flutter: ^8.1.2
 
 
 dev_dependencies:
@@ -67,7 +68,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+      - resources/exc_videos/pushup.gif
+      - resources/exc_videos/situp.gif
+      - resources/exc_videos/squat.gif
+
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
