Revert "Revert "Merge branch 'raymond-fucking-around' into HunterCode""
This reverts commit cd618b64df57c7d44907bb5e07ae92ee6478ed3a.

--- a/repfit_main/pubspec.yaml
+++ b/repfit_main/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   youtube_player_flutter: ^8.1.2
   #path_provider: ^1.6.27
   hive: ^2.2.3
-  hive_flutter:
+  hive_flutter: ^1.1.0
 
 
 dev_dependencies:
